# cybernetics-agent

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  docker-compose.yml  pipeline_cybernetics_report.json  pyproject.toml  xiaohongshu_post.md  xiaohongshu_post_v2.md
.cybernetics/: events.jsonl
.github/workflows/: ci.yml  release.yml
dashboard_static/: app.js  index.html  style.css
docs/: RFC-001.md  SESSION-2026-05-13.md  adapters.md  configuration.md  dashboard.md  getting-started.md  v0.4.0-alert-design.md  v0.5.0-design.md  v0.6.0-design.md  v0.7.0-design.md
examples/: cybernetics.json  cybernetics.yaml  minimal_hermes.py  minimal_langchain.py  minimal_native.py  pipeline_integration.py  pipeline_integration_mock.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
scripts/: benchmark_compare.py  delete_pypi_old_versions.py
src/cybernetics_agent/: __init__.py  async_context.py  config.py  config_schema.py  context.py  presets.py
src/cybernetics_agent/adapters/: __init__.py  autogen.py  base.py  claude_code.py  codex.py  crewai.py  hermes.py  langchain.py  native.py  openclaw.py  qwenpaw.py
src/cybernetics_agent/alert/: __init__.py  aggregator.py  core.py  manager.py  rules.py
src/cybernetics_agent/alert/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  slack.py  stdout.py  webhook.py
src/cybernetics_agent/cli/: __init__.py  __main__.py  alert_cmd.py  audit.py  dashboard.py  dashboard_fastapi.py  init.py  main.py  plugin_cmd.py  preset.py  report.py  validate.py
src/cybernetics_agent/core/: __init__.py  adaptive_tuner.py  bandit.py  base.py  circuit_breaker.py  feedback_loop.py  hierarchy_controller.py  info_flow.py  mpc_controller.py  optimal_controller.py  parameter_state.py  pid_controller.py  stability_engine.py  stage_metrics.py  system_identifier.py
src/cybernetics_agent/runtime/: __init__.py  archiver.py  async_event_bus.py  config_watcher.py  event_bus.py  event_store.py  metrics_collector.py  plugin_loader.py  state_manager.py  tracing.py
src/cybernetics_agent/storage/: __init__.py
tests/: test_alert_aggregator.py  test_all_remaining_branches.py  test_archiver.py  test_async_context.py  test_async_event_bus.py  test_comprehensive_final.py  test_config.py  test_config_context_coverage2.py  test_config_edge.py  test_config_env.py  test_config_extra.py  test_config_final.py  test_config_final2.py  test_config_validation.py  test_context.py  test_context_coverage.py  test_context_edge.py  test_context_extra.py  test_context_final.py  test_context_final2.py  test_context_load_plugins.py  test_context_load_plugins_exception.py  test_control_theory.py  test_dashboard_health.py  test_final_edge_cases.py  test_presets.py  test_presets_edge.py  test_runtime_edge.py  test_runtime_final.py  test_tracing.py
tests/benchmark/: test_benchmark_core.py  test_benchmark_runtime.py
tests/test_alert/: __init__.py  test_alert_channels.py  test_alert_channels_base.py  test_alert_channels_error.py  test_alert_channels_error2.py  test_alert_channels_final.py  test_alert_channels_health.py  test_alert_channels_mock.py  test_alert_channels_success.py  test_alert_core.py  test_alert_extra.py  test_alert_final.py  test_alert_manager.py  test_alert_manager_coverage.py  test_alert_manager_exception.py  test_alert_manager_final.py  test_alert_rules.py  test_alert_stdout.py
tests/test_cli/: test_alert_cli.py  test_cli.py  test_dashboard.py
tests/test_core/: __init__.py  test_adaptive_tuner.py  test_adaptive_tuner_coverage.py  test_adaptive_tuner_coverage2.py  test_adaptive_tuner_edge.py  test_adaptive_tuner_edge2.py  test_adaptive_tuner_extra.py  test_adaptive_tuner_extra2.py  test_adaptive_tuner_final.py  test_base.py  test_circuit_breaker.py  test_config_validation.py  test_core_branches.py  test_feedback_loop.py  test_feedback_loop_coverage.py  test_feedback_loop_coverage2.py  test_feedback_loop_edge.py  test_feedback_loop_edge2.py  test_feedback_loop_extra.py  test_feedback_loop_extra2.py  test_feedback_loop_final.py  test_hierarchy_controller.py  test_hierarchy_controller_coverage.py  test_hierarchy_controller_coverage2.py  test_hierarchy_controller_edge.py  test_hierarchy_controller_edge2.py  test_hierarchy_controller_extra.py  test_hierarchy_controller_extra2.py  test_hierarchy_controller_final.py  test_info_flow.py  test_info_flow_coverage.py  test_info_flow_coverage2.py  test_info_flow_edge.py  test_info_flow_edge2.py  test_info_flow_extra.py  test_info_flow_extra2.py  test_info_flow_final.py  test_integration.py  test_metrics_collector_edge.py  test_metrics_collector_final2.py  (+28 more)
tests/test_runtime/: test_config_watcher.py  test_config_watcher_coverage.py  test_config_watcher_exception.py  test_config_watcher_final.py  test_config_watcher_final2.py  test_event_bus.py  test_event_bus_coverage.py  test_event_bus_error.py  test_event_bus_exception.py  test_event_bus_final.py  test_event_bus_final2.py  test_event_store.py  test_event_store_batch.py  test_event_store_extra.py  test_event_store_final.py  test_metrics_collector_coverage.py  test_metrics_collector_exception.py  test_metrics_collector_extra.py  test_metrics_collector_final.py  test_metrics_collector_final2.py  test_metrics_exporter.py  test_plugin_loader.py  test_plugin_loader_coverage.py  test_plugin_loader_exception.py  test_plugin_loader_final.py  test_plugin_loader_final2.py  test_state_manager.py
