[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybernetics-agent"
version = "0.2.0"
description = "A framework-agnostic cybernetics enhancement layer for AI agents, based on Qian Xuesen's Engineering Cybernetics."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Cybernetics Agent Contributors", email = "your-email@example.com" },
]
keywords = [
    "agent",
    "cybernetics",
    "feedback-loop",
    "control-theory",
    "ai",
    "llm",
    "langchain",
    "crewai",
    "autogen",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.scripts]
cybernetix = "cybernetics_agent.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]
dashboard = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
]
all = [
    "cybernetics-agent[dev,dashboard]",
]

[project.urls]
Homepage = "https://github.com/Jiaqi-Guo-0114/cybernetics-agent"
Documentation = "https://github.com/Jiaqi-Guo-0114/cybernetics-agent#readme"
Repository = "https://github.com/Jiaqi-Guo-0114/cybernetics-agent"
Issues = "https://github.com/Jiaqi-Guo-0114/cybernetics-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cybernetics_agent"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
