[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybernetics-agent"
version = "0.6.1"
description = "A framework-agnostic cybernetics enhancement layer for AI agents, based on Qian Xuesen's Engineering Cybernetics."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Cybernetics Agent Contributors", email = "agent@cybernetics.dev" },
]
keywords = [
    "agent",
    "cybernetics",
    "feedback-loop",
    "control-theory",
    "ai",
    "llm",
    "langchain",
    "crewai",
    "autogen",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.scripts]
cybernetix = "cybernetics_agent.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
dashboard = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
]
all = [
    "cybernetics-agent[dev,dashboard]",
]

[project.urls]
Homepage = "https://github.com/Jiaqi-Guo-0114/cybernetics-agent"
Documentation = "https://github.com/Jiaqi-Guo-0114/cybernetics-agent#readme"
Repository = "https://github.com/Jiaqi-Guo-0114/cybernetics-agent"
Issues = "https://github.com/Jiaqi-Guo-0114/cybernetics-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cybernetics_agent"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
strict = false
ignore_missing_imports = true
warn_no_return = false
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "cybernetics_agent.adapters.langchain",
    "cybernetics_agent.adapters.crewai",
    "cybernetics_agent.adapters.autogen",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "cybernetics_agent.core.*",
    "cybernetics_agent.adapters.*",
    "cybernetics_agent.alert.channels.*",
    "cybernetics_agent.presets",
    "cybernetics_agent.cli.preset",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/adapters/autogen.py",
    "*/adapters/crewai.py",
    "*/adapters/langchain.py",
    "*/adapters/claude_code.py",
    "*/adapters/codex.py",
    "*/adapters/openclaw.py",
    "*/adapters/qwenpaw.py",
    "*/cli/audit.py",
    "*/cli/dashboard.py",
    "*/cli/dashboard_fastapi.py",
    "*/cli/init.py",
    "*/cli/main.py",
    "*/cli/plugin_cmd.py",
    "*/cli/preset.py",
    "*/cli/report.py",
    "*/cli/validate.py",
    "*/cli/alert_cmd.py",
    "*/cli/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
